--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <br>
     <h1>S T U D Y B U D . I O</h1>
     <h3>get ahead of the curve with your study bud</h3>
     <nav class=".navbar">
@@ -42,7 +43,7 @@
   </section>
 
   <section id="contactid">
-    <h2>Contact Form</h2>
+    <h2 style="background-color:wheat; text-align: center; padding-top: 20px; padding-bottom: 20px;">CONTACT US!</h2>
     <form>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
@@ -53,7 +54,7 @@
       <label for="message">Message:</label>
       <textarea id="message" name="message" required></textarea>
 
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit" style="text-align: center;">
     </form>
   </section>
   <script src="script.js"></script>
