--- a/test.html
+++ b/test.html
@@ -30,7 +30,7 @@
 
 
   <section id="todo_id">
-    <h2 style="background-color: violet; padding-top: 10px; padding-bottom: 10px;">TO DO SECTION</h2>
+    <h2 style="padding-top: 10px; padding-bottom: 10px;">TO DO SECTION</h2>
     <div id="tasks-container">
       <div id="add-task">
         <input type="text" id="task-input" placeholder="Enter a task...">
