--- a/test.html
+++ b/test.html
@@ -20,9 +20,9 @@
     </nav>
   </header>
 
-
+  <main>
   <section id="pomoid">
-    <h2>POMODORO TIMER ~ small steps to success!</h2>
+    <h2>POMODORO TIMER<br>small steps to success!</h2>
     <div id="timer">25:00</div>
     <button id="start-btn">Start</button>
     <button id="reset-btn">Reset</button>
@@ -30,10 +30,10 @@
 
 
   <section id="todo_id">
-    <h2 style="padding-top: 10px; padding-bottom: 10px;">TO DO SECTION</h2>
+    <h2 style="padding-top: 10px; padding-bottom: 10px; text-align: left; width: 30%;">TO<br>DO<br>SECTION</h2>
     <div id="tasks-container">
       <div id="add-task">
-        <input type="text" id="task-input" placeholder="Enter a task...">
+        <input type="text" id="task-input" placeholder="Enter a task..." style="width: 30%; left: 30%;" >
         <button id="add-btn">Add Task</button>
       </div>
       <ul id="task-list">
@@ -58,5 +58,6 @@
     </form>
   </section>
   <script src="script.js"></script>
+</main>
 </body>
 </html>
